--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 .jost-<uniquifier> {
   font-family: "Jost", sans-serif;
   font-optical-sizing: auto;
-  font-weight: <weight>;
+  font-weight: <weight>; 
   font-style: normal;
 }
 */
@@ -19,8 +19,37 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: "Jost", sans-serif;
+    color: #1E1E1E;
 }
 
+h1,h2,h3,.title{
+    font-family: "DM Serif Display", serif;
+    font-weight:normal ;
+}
+
+h1{
+    font-size: 85px;
+}
+h2{
+    font-size: 50px;
+}
+.text-center{
+    text-align: center;
+}
+h3{
+    font-size: 25px;
+    margin-bottom: 20px;
+}
+p{
+    line-height: 150%;
+    font-size: 22px;
+    /*cette propriété permet d'avoir des retours a la ligne plus naturels et harmonieux dans les paragraphes*/
+    text-wrap: balance;
+}
+.sloggan{
+    font-size: 22px;
+}
 /*------------------------------------------
         FLEXBOX et largeur 
 --------------------------------------------*/
@@ -28,13 +57,16 @@
     display: flex;
     flex-wrap: wrap;
 }
-.space-betwwen{
+.justify-between{
     justify-content: space-between;
 }
-.space-around{
+.justify-around{
     justify-content: space-around;
 }
-.align-items{
+.justify-center{
+    justify-content: center;
+}
+.align-center{
     align-items: center;
 }
 .container{
@@ -42,22 +74,206 @@
     margin-left: auto;
     margin-right: auto;
 }
-.menu{
+
+.w15{
+    width: 15%;
+}
+.w30{
     width: 30%;
 }
+.w45{
+    width: 45%;
+}
+
+.w60{width: 60%;}
+.responsive{
+    width: 100%;
+    height: auto;
+    }
+.gap16{
+    gap: 16px;
+}
+.gap32{
+    gap: 32px;
+}
+.gap64{
+    gap: 64px;
+}
+
+/*Margins and paddings*/
+.mt150{
+    margin-top: 150px;
+}
+.mt32{
+    margin-top: 32px;
+}
+.mt16{
+    margin-top: 16px;
+}
+.ptb64{
+    padding: 64px 0;
+}
+/*buttons*/
+.btn{
+    display: inline-block;
+    padding: 26px 32px;
+    border-radius: 18px;
+    background-color: #292F36;
+    color: #fff;
+    font-size: 22px;
+}
+
+
+/*Style du header*/
+
 .logo{
     width: 200px;
+    display: block;
+}
+header nav ul li {
+    list-style: none;
 }
 
-.mt100{
-    margin-top: 100px;
+header a, a{
+    text-decoration: none;
 }
-
 header{
-    background-color: blue;
+    position: fixed;
+    width: 100%;
+    background-color: #fff;
 }
+/*section hero*/
+
 .hero{
-    background-color :orangered;
+    background-image: url("./assets/Banner.jpg");
+    background-size: cover;
     height: 100vh;
+    border-radius: 0 0 0 290px ;
+    padding-top: 25vh;
+    
 }
 
+/*section services*/
+.services h3{
+    text-align: center;
+}
+
+/*section présentation*/
+.presentation img{
+    border-radius: 0 264px 0 123px;
+}
+
+/*section avis client*/
+.bg-gris{
+    background-color: #F4F0EC;
+}
+.card-avis{
+    background-color: #fff;
+    padding: 16px;
+    border-radius: 16px;
+}
+.card-avis h3{
+    margin-bottom: 4px;
+}
+
+/*pictos dans des cercles*/
+.picto-tel{
+
+}
+.picto-chevron{
+   width: 70px;
+   height: 70px;
+ 
+}
+
+.picto-chevron,.picto-tel{
+    background-color: #F4F0EC;
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/*Projets*/
+.rond-haut-droite{
+ border-radius: 0 80px 0 0;
+}
+.rond-haut-gauche{
+    border-radius: 80px 0 0 0;
+}
+.rond-bas-gauche{
+ border-radius: 0 0 0 80px;
+}
+.rond-bas-droite{
+    border-radius: 0 0 80px 0;
+}
+.projets h3{
+    margin-bottom: 8px;
+}
+
+/*section nous rejoindre*/
+.bg-dark{
+    background-color: #292F36;
+    h2,p{color: #fff;}
+    padding: 64px 0;
+    input{
+        width: 40%;
+        padding: 8px;
+        margin-top: 16px;
+    }
+}
+
+
+.modal{
+
+    p{
+        margin-bottom: 16px;
+    }
+    textarea{
+        width: 100%;
+        height: 150px;
+    }
+    width: 60%;
+    padding: 64px;
+    position: fixed;
+    top:50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    background-color: #fff;
+
+    z-index: 3;
+}
+.mask{
+       
+        background-color: #1f1f1f96;
+        width: 100vw;
+        height: 100vh;
+        position: fixed;
+        top:0;
+        left:0;
+        z-index: 2,
+    }
+.modal label{
+    display: block;
+    margin-top: 22px;
+}
+
+.label-inline{
+    display: inline !important;
+    margin-right: 8px;
+    margin-left: 2px;
+}
+
+input, textarea, select{
+    border: 1px solid #b6b6b6;
+    border-radius: 4px;
+}
+input[type="text"],input[type="email"], select{
+    width: 200px;
+    padding: 4px;
+
+}
+
+.display-none{
+    display: none;
+}
